# DanceDJAssistant

./: .gitignore  DJAssistant.py  README.md  __init__.py  db.py  djassistant.py  main.py  model_controller.py  pyproject.toml  run_app.py
app/: __init__.py  auth_controller.py  extensions.py  model_controller.py
app/model/: database_models.py  deleteme.py  djassistant.py
app/templates/: define-profile.html  select-playlist.html  upload-playlist.html  view-playlist.html  wait-for-playlist.html
app/tests/: example.db  example1.db  test_djassistant.py  test_only.db
cache/joblib/__main__-c%3A-users-mazzac3-documents-github-dancedjassistant-main/analyze_songs/: func_code.py
cache/joblib/__main__-c%3A-users-mazzac3-documents-github-dancedjassistant-main/analyze_songs/0004a995f329594d1c26b17b8e6e5577/: metadata.json  output.pkl
cache/joblib/__main__-c%3A-users-mazzac3-documents-github-dancedjassistant-main/parse_playlist/: func_code.py
model/: DJAssistant.py  database_models.py
templates/: base.html  define-profile.html  view-playlist-stats.html
tests/: ordered_playlist.html  temp.songs  test_djassistant.py  test_only.db  unordered_playlist.html
tests/playlist_matching_plots/: euclidean_damped.html  euclidean_undamped.html  euclidean_undamped_oversampled_target_profile.html  global_naive_damped.html  global_naive_undamped.html  naive_damped.html  naive_undamped.html  upsampled_euclidean_damped.html  upsampled_euclidean_undamped.html
(+3940 files in other folders)
