[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "djassistant"
version = "0.0.1"
authors = [
  { name="Corrado Mazzarelli", email="corrado@mazzarelli.biz" },
]
dependencies = [
    "tqdm",
    "spotipy",
    "tenacity",
    "scipy",
    "pandas",
    "numpy",
    "matplotlib",
    'importlib-metadata; python_version<"3.10"',
]